--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "loader.js": "ember-cli/loader.js#3.4.0",
     "qunit": "~1.20.0",
     "firebase": "^2.1.0",
-    "font-awesome": "~4.4.0"
+    "semantic-ui": "~2.1.7"
   },
   "resolutions": {
     "ember": "^2.0.0",
